# nsysu-captcha-solver

./: LICENSE  README-zh-tw.md  README.md  README.zh_tw.md
src/: get_img.py
src/bmp_pre_proc/: CMakeLists.txt  README.md
src/bmp_pre_proc/driver/cpp/: main.cpp
src/bmp_pre_proc/driver/python/: wrapper.py
src/bmp_pre_proc/lib/: CMakeLists.txt  bitmap_image.hpp  proc.cpp  proc.hpp
src/bmp_pre_proc/web_asm/: a.out.js  a.out.wasm
src/convnet-example/: index.html  index.js
src/example/: options.html  options.js  popup.html
src/extension/: background.js  content.js  manifest.json  popup.js
src/extension/chrome/: content.js  manifest.json
src/extension/firefox/: content.js  manifest.json  tf.min.js
src/extension/safari/extension_safari Extension/: SafariWebExtensionHandler.swift
src/extension/safari/extension_safari.xcodeproj/: project.pbxproj
src/extension_chrome/: manifest.json
src/extension_safari/extension_safari/: AppDelegate.swift  ViewController.swift
src/extension_safari/extension_safari Extension/: Info.plist
src/neural_network_engine/: labels.csv  train.py  train_demo.ipynb
src/neural_network_engine/data_preprocessing/: split_img.py
src/neural_network_engine/data_preprocessing/utils/: get_img.py  predict_img.py
src/neural_network_engine/outputs/model_tfjs/: model.json
src/training/: labels.csv  model.h5  train.ipynb  train.py
src/training/.ipynb_checkpoints/: labels-checkpoint.csv  train-checkpoint.ipynb  train_pytorch-checkpoint.ipynb
src/training/data_preprocess/: get_img.py  model.h5  predict_img.py
(+5 files in other folders)
